nohup.out
Performing system checks...

System check identified no issues (0 silenced).
November 11, 2017 - 15:38:31
Django version 1.11.6, using settings 'my_website.settings'
Starting development server at http://0:8002/
Quit the server with CONTROL-C.
Performing system checks...

System check identified no issues (0 silenced).
November 11, 2017 - 15:40:26
Django version 1.11.6, using settings 'my_website.settings'
Starting development server at http://0:8002/
Quit the server with CONTROL-C.
Performing system checks...

System check identified no issues (0 silenced).
November 11, 2017 - 15:40:31
Django version 1.11.6, using settings 'my_website.settings'
Starting development server at http://0:8002/
Quit the server with CONTROL-C.
Performing system checks...

System check identified no issues (0 silenced).
November 11, 2017 - 15:41:10
Django version 1.11.6, using settings 'my_website.settings'
Starting development server at http://0:8002/
Quit the server with CONTROL-C.
Performing system checks...

System check identified no issues (0 silenced).
November 11, 2017 - 15:45:22
Django version 1.11.6, using settings 'my_website.settings'
Starting development server at http://0:8002/
Quit the server with CONTROL-C.
[11/Nov/2017 15:46:40] "GET /getlist/ HTTP/1.1" 200 44
Not Found: /favicon.ico
[11/Nov/2017 15:46:40] "GET /favicon.ico HTTP/1.1" 404 2439
[11/Nov/2017 15:46:50] "GET /getlist HTTP/1.1" 301 0
[11/Nov/2017 15:46:51] "GET /getlist/ HTTP/1.1" 200 44
[11/Nov/2017 15:47:25] "GET /getlist?category=[%27yjs%27]&page=1&num=3 HTTP/1.1" 301 0
[11/Nov/2017 15:47:25] "GET /getlist/?category=[%27yjs%27]&page=1&num=3 HTTP/1.1" 200 590
[11/Nov/2017 15:47:35] "GET /getlist/?category=['yjs']&page=1&num=3 HTTP/1.1" 200 590
[11/Nov/2017 15:47:35] "GET /getlist?category=['yjs']&page=1&num=3 HTTP/1.1" 301 0
[11/Nov/2017 15:47:36] "GET /getlist/?category=['yjs']&page=1&num=3 HTTP/1.1" 200 590
Performing system checks...

System check identified no issues (0 silenced).
November 11, 2017 - 15:46:08
Django version 1.11.6, using settings 'my_website.settings'
Starting development server at http://0:8002/
Quit the server with CONTROL-C.
Unhandled exception in thread started by <function wrapper at 0x326bd70>
Performing system checks...

Traceback (most recent call last):
  File "/usr/lib64/python2.7/site-packages/django/utils/autoreload.py", line 228, in wrapper
    fn(*args, **kwargs)
  File "/usr/lib64/python2.7/site-packages/django/core/management/commands/runserver.py", line 125, in inner_run
    self.check(display_num_errors=True)
  File "/usr/lib64/python2.7/site-packages/django/core/management/base.py", line 359, in check
    include_deployment_checks=include_deployment_checks,
  File "/usr/lib64/python2.7/site-packages/django/core/management/base.py", line 346, in _run_checks
    return checks.run_checks(**kwargs)
  File "/usr/lib64/python2.7/site-packages/django/core/checks/registry.py", line 81, in run_checks
    new_errors = check(app_configs=app_configs)
  File "/usr/lib64/python2.7/site-packages/django/core/checks/urls.py", line 16, in check_url_config
    return check_resolver(resolver)
  File "/usr/lib64/python2.7/site-packages/django/core/checks/urls.py", line 26, in check_resolver
    return check_method()
  File "/usr/lib64/python2.7/site-packages/django/urls/resolvers.py", line 254, in check
    for pattern in self.url_patterns:
  File "/usr/lib64/python2.7/site-packages/django/utils/functional.py", line 35, in __get__
    res = instance.__dict__[self.name] = self.func(instance)
  File "/usr/lib64/python2.7/site-packages/django/urls/resolvers.py", line 405, in url_patterns
    patterns = getattr(self.urlconf_module, "urlpatterns", self.urlconf_module)
  File "/usr/lib64/python2.7/site-packages/django/utils/functional.py", line 35, in __get__
    res = instance.__dict__[self.name] = self.func(instance)
  File "/usr/lib64/python2.7/site-packages/django/urls/resolvers.py", line 398, in urlconf_module
    return import_module(self.urlconf_name)
  File "/usr/lib64/python2.7/importlib/__init__.py", line 37, in import_module
    __import__(name)
  File "/opt/tiger/my_website/my_website/urls.py", line 18, in <module>
    from my_app import views
  File "/opt/tiger/my_website/my_app/views.py", line 54
    elif request.method == 'POST':
       ^
SyntaxError: invalid syntax
Unhandled exception in thread started by <function wrapper at 0x2512d70>
Performing system checks...

Traceback (most recent call last):
  File "/usr/lib64/python2.7/site-packages/django/utils/autoreload.py", line 228, in wrapper
    fn(*args, **kwargs)
  File "/usr/lib64/python2.7/site-packages/django/core/management/commands/runserver.py", line 125, in inner_run
    self.check(display_num_errors=True)
  File "/usr/lib64/python2.7/site-packages/django/core/management/base.py", line 359, in check
    include_deployment_checks=include_deployment_checks,
  File "/usr/lib64/python2.7/site-packages/django/core/management/base.py", line 346, in _run_checks
    return checks.run_checks(**kwargs)
  File "/usr/lib64/python2.7/site-packages/django/core/checks/registry.py", line 81, in run_checks
    new_errors = check(app_configs=app_configs)
  File "/usr/lib64/python2.7/site-packages/django/core/checks/urls.py", line 16, in check_url_config
    return check_resolver(resolver)
  File "/usr/lib64/python2.7/site-packages/django/core/checks/urls.py", line 26, in check_resolver
    return check_method()
  File "/usr/lib64/python2.7/site-packages/django/urls/resolvers.py", line 254, in check
    for pattern in self.url_patterns:
  File "/usr/lib64/python2.7/site-packages/django/utils/functional.py", line 35, in __get__
    res = instance.__dict__[self.name] = self.func(instance)
  File "/usr/lib64/python2.7/site-packages/django/urls/resolvers.py", line 405, in url_patterns
    patterns = getattr(self.urlconf_module, "urlpatterns", self.urlconf_module)
  File "/usr/lib64/python2.7/site-packages/django/utils/functional.py", line 35, in __get__
    res = instance.__dict__[self.name] = self.func(instance)
  File "/usr/lib64/python2.7/site-packages/django/urls/resolvers.py", line 398, in urlconf_module
    return import_module(self.urlconf_name)
  File "/usr/lib64/python2.7/importlib/__init__.py", line 37, in import_module
    __import__(name)
  File "/opt/tiger/my_website/my_website/urls.py", line 18, in <module>
    from my_app import views
  File "/opt/tiger/my_website/my_app/views.py", line 54
    elif request.method == 'POST':
       ^
SyntaxError: invalid syntax
Error: That port is already in use.
Performing system checks...

System check identified no issues (0 silenced).
November 11, 2017 - 15:58:53
Django version 1.11.6, using settings 'my_website.settings'
Starting development server at http://0:8002/
Quit the server with CONTROL-C.
Performing system checks...

System check identified no issues (0 silenced).
November 11, 2017 - 16:01:11
Django version 1.11.6, using settings 'my_website.settings'
Starting development server at http://0:8002/
Quit the server with CONTROL-C.
Performing system checks...

System check identified no issues (0 silenced).
November 11, 2017 - 16:01:27
Django version 1.11.6, using settings 'my_website.settings'
Starting development server at http://0:8002/
Quit the server with CONTROL-C.
[11/Nov/2017 16:02:24] "GET /getlist?page=1&num=6&category%5B%5D=yjs HTTP/1.1" 301 0
[11/Nov/2017 16:02:34] "GET /getlist?page=1&num=6&category[]=yjs HTTP/1.1" 301 0
[11/Nov/2017 16:02:34] "GET /getlist/?page=1&num=6&category[]=yjs HTTP/1.1" 200 44
[11/Nov/2017 16:03:16] "GET /getlist/?page=1&num=6&category%5B%5D=yjs HTTP/1.1" 200 44
[11/Nov/2017 16:03:48] "GET /getlist/?page=1&num=6&category=[%27yjs%27] HTTP/1.1" 200 28
[11/Nov/2017 16:03:58] "GET /getlist/?page=1&num=6&category=['yjs'] HTTP/1.1" 200 28
[11/Nov/2017 16:04:25] "GET /getlist?page=1&num=6&category=%5Byjs%5D HTTP/1.1" 301 0
[11/Nov/2017 16:04:52] "GET /getlist/?page=1&num=6&category=[%27yjs%27] HTTP/1.1" 200 28
[11/Nov/2017 16:04:54] "GET /getlist/?page=1&num=6&category=[%27yjs%27] HTTP/1.1" 200 28
[11/Nov/2017 16:05:11] "GET /getlist/?page=1&num=6&category=%5Byjs%5D HTTP/1.1" 200 42
[11/Nov/2017 16:05:21] "GET /getlist/?page=1&num=6&category=[yjs] HTTP/1.1" 200 42
[11/Nov/2017 16:07:17] "GET /getlist?page=1&num=6&category=[yjs] HTTP/1.1" 301 0
[11/Nov/2017 16:07:19] "GET /getlist/?page=1&num=6&category=[yjs] HTTP/1.1" 200 42
Performing system checks...

System check identified no issues (0 silenced).
November 11, 2017 - 16:01:45
Django version 1.11.6, using settings 'my_website.settings'
Starting development server at http://0:8002/
Quit the server with CONTROL-C.
Performing system checks...

System check identified no issues (0 silenced).
November 11, 2017 - 16:07:49
Django version 1.11.6, using settings 'my_website.settings'
Starting development server at http://0:8002/
Quit the server with CONTROL-C.
Performing system checks...

System check identified no issues (0 silenced).
November 11, 2017 - 16:08:05
Django version 1.11.6, using settings 'my_website.settings'
Starting development server at http://0:8002/
Quit the server with CONTROL-C.
[11/Nov/2017 16:12:50] "GET /getlist?page=1&num=6&category=%5Byjs%5D HTTP/1.1" 301 0
[11/Nov/2017 16:12:50] "GET /getlist/?page=1&num=6&category=%5Byjs%5D HTTP/1.1" 200 42
[11/Nov/2017 16:14:55] "GET /getlist/?page=1&num=6&category=%5Byjs%5D HTTP/1.1" 200 42
[11/Nov/2017 16:15:22] "GET /getlist/?page=1&num=6&category=%5Byjs%5D HTTP/1.1" 200 42
Performing system checks...

System check identified no issues (0 silenced).
November 11, 2017 - 16:11:39
Django version 1.11.6, using settings 'my_website.settings'
Starting development server at http://0:8002/
Quit the server with CONTROL-C.
